# bookstore-kmshah2-17647

./: .gitignore  Dockerfile.bookstore_customers  README.md  url.txt
bookstore/: Cargo.toml
bookstore_books/: .env.example  Cargo.toml
bookstore_books/src/: main.rs
bookstore_books/src/dto/: book.rs  gemini.rs  mod.rs
bookstore_books/src/endpoint/: books.rs  mod.rs  status.rs
bookstore_books/src/state/: circuit_breaker.rs  mod.rs  mysql.rs
bookstore_customers/: .env.example  Cargo.toml
bookstore_customers/src/: main.rs
bookstore_mobile_app/: Cargo.toml
bookstore_mobile_app/src/: main.rs
bookstore_mobile_bff/: .env.example  Cargo.toml
bookstore_mobile_bff/src/: main.rs
bookstore_web_app/: Cargo.toml
bookstore_web_app/src/: main.rs
bookstore_web_app/src/dto/: book.rs  customer.rs  failure.rs  mod.rs
bookstore_web_app/src/endpoint/: books.rs  customers.rs  status.rs
bookstore_web_app/src/endpoints/: books.rs  customers.rs  mod.rs  status.rs
bookstore_web_app/src/middleware/: auth.rs
bookstore_web_app/src/state/: http_connection.rs  tcp.rs
bookstore_web_bff/: Cargo.toml
bookstore_web_bff/src/: main.rs
customer_crm/: .env.example  Cargo.toml
customer_crm/src/: mailer.rs  main.rs
customer_crm/src/dto/: customer.rs
deployment/: CF-A2-cmu.yml  Dockerfile.bookstore_books  Dockerfile.bookstore_customers  Dockerfile.bookstore_mobile_bff  Dockerfile.bookstore_web_bff  Dockerfile.customer_crm  Dockerfile.customer_crm_binary  aws_config.yml  init_books_db.sql  init_customer_db.sql  init_db.sql
deployment/scripts/: init_aws_database.sh  (+1 more)
(+50 files in other folders)
