[package]
name = "bookstore_books"
version = "0.1.0"
authors = ["Karan Manoj Shah <kmshah2@cs.cmu.edu>"]
edition = "2024"
publish = false

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "tls-rustls"] }
tokio = { version = "1.50.0", features = ["full"] }
