[package]
name = "bookstore_web_app"
version = "0.1.0"
authors = ["Karan Manoj Shah <kmshah2@cs.cmu.edu>"]
edition = "2024"
publish = false

[dependencies]
axum = "0.8.8"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
